# ESP32Drone

./: .gitignore  CMakeLists.txt  README.md  document.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old
components/ryu_sensor/: CMakeLists.txt  ryu_74hc138.cpp  ryu_74hc138.h  ryu_ak09916.cpp  ryu_ak09916.h  ryu_bmp388.cpp  ryu_bmp388.h  ryu_gps.cpp  ryu_gps.h  ryu_i2c.cpp  ryu_i2c.h  ryu_icm20948.cpp  ryu_icm20948.h  ryu_ist8310.cpp  ryu_ist8310.h  ryu_spi.cpp
components/ryu_sensor/include/: ryu_ak09916.h  ryu_icm20948.h  ryu_ist8310.h  ryu_spi.h
components/ryu_service/: CMakeLists.txt  ryu_MahonyFilter.cpp  ryu_MahonyFilter.h  ryu_espnow.cpp  ryu_espnow.h  ryu_failsafe.cpp  ryu_failsafe.h  ryu_flysky.cpp  ryu_flysky.h  ryu_mag.cpp  ryu_mag.h  ryu_magsensor.cpp  ryu_magsensor.h  ryu_mavlink.cpp  ryu_mavlink.h  ryu_telemetry.cpp  ryu_telemetry.h  ryu_timer.cpp  ryu_timer.h  ryu_wifi.cpp  ryu_wifi.h
document/: ESP32Drone.params  Param Table.xlsx  ist8310_data.csv  qgc_param.txt
main/: CMakeLists.txt  readme.txt  ryu_FlightEventManager.cpp  ryu_FlightEventManager.h  ryu_MahonyFilter.cpp  ryu_SensorManager.cpp  ryu_SensorTask.cpp  ryu_Sersor_Isr.cpp  ryu_battery.cpp  ryu_businterface.h  ryu_buzzer.cpp  ryu_buzzer.h  ryu_error_proc.cpp  ryu_flight.cpp  ryu_flight_event.h  ryu_flight_task.cpp  ryu_flight_task.h  ryu_flysky.cpp  ryu_flysky.h  ryu_gps.cpp  ryu_gps.h  ryu_main.cpp  ryu_main.h  ryu_mavlink.cpp  ryu_mavlink.h  ryu_nvs.cpp  ryu_nvs.h  ryu_pid.cpp  ryu_sensor_event.h  ryu_servo.cpp  ryu_servo.h  (+6 more)
(+77 files in other folders)
